cmake_minimum_required(VERSION 2.8)  # cmake的最低版本
PROJECT (LEETCODE)  # 项目名称
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
SET(CMAKE_CXX_STANDARD 17)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
ADD_SUBDIRECTORY(src)
MESSAGE (STATUS "This is BINARY dir" ${PROJECT_BINARY_DIR})
MESSAGE (STATUS "This is SOURCE dir" ${PROJECT_SOURCE_DIR})